# IFComunidade_backend

./: .env  build.sh  core.json  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
core/: admin.py  router.py
core/migrations/: 0001_initial.py  0002_ocorrencia_imagem_alter_postagem_imagem.py  0002_ocorrencia_representante.py  0003_ocorrencia_usuario_postagem_usuario.py  0003_postagem.py  0004_ocorrencia_setor.py  0004_opcao.py  0005_remove_ocorrencia_anexo_ocorrencia_anonima_and_more.py  0006_alter_ocorrencia_status_tramite.py  0007_remove_ocorrencia_tipo_ocorrencia_ocorrencia_tipo.py  0008_alter_ocorrencia_texto.py  0008_remove_postagem_tipo_postagem_alter_postagem_data.py  0009_ocorrencia_categoria.py  0010_merge_20250927_2014.py
core/models/: __init__.py  categoria.py  curso.py  ocorrencia.py  opcao.py  pessoa.py  postagem.py  representante.py  setor.py  tipo_setor.py  tramite.py
core/serializers/: __init__.py  categoria.py  curso.py  ocorrencia.py  opcao.py  postagem.py  representante.py  setor.py  tipo_setor.py  tramite.py
core/views/: __init__.py  categoria.py  curso.py  ocorrencia.py  opcao.py  postagem.py  setor.py  tramite.py
uploader/: views.py
usuario/: __init__.py  admin.py  managers.py  models.py  router.py  serializers.py  signals.py  views.py
usuario/dados_falsos/: alunos.json
usuario/migrations/: 0001_initial.py  0002_alter_setor_options.py  0002_remove_perfilaluno_curso_remove_perfilaluno_usuario_and_more.py  0003_usuario_tipo.py  0004_remove_setor_usuario_usuario_cpf_usuario_curso_and_more.py  0005_usuario_foto.py  0006_usuario_username_alter_usuario_cpf.py  0007_alter_usuario_username.py
usuario/models/: __init__.py  perfil.py  usuario.py
