[project]
name = "IFComunidade_backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "carloshenriqueok", email = "ifcarloshenrique@gmail.com"},
]
dependencies = ["django>=5.2.5", "djangorestframework>=3.16.1", "django-cors-headers>=4.7.0", "setuptools>=80.9.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
